[gd_scene load_steps=2 format=3 uid="uid://h68w6gbev8e"]

[ext_resource type="Script" uid="uid://byyqp6xnfo86s" path="res://interactions/interaction_area.gd" id="1_dslt7"]

[node name="InteractionArea" type="Area2D"]
collision_layer = 0
script = ExtResource("1_dslt7")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
